[package]
name = "movie-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
eyre = "0.6.12"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
